# rnsqip-from-scratch-demo

./: .gitignore  App.tsx  Cargo.toml  README  app.json  index.js  metro.config.js  package-lock.json  package.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/timmyjose/rnsqipfromscratchdemo/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
app/: ChargeError.js  Constants.js  Utilities.tsx
app/components/: AddressView.tsx  CommonAlert.tsx  DigitalWalletButton.tsx  GreenButton.tsx  OrderInformationDescriptionView.tsx  OrderInformationTitleView.tsx  OrderModal.tsx  OrderTitleView.tsx  PendingModal.tsx
app/screens/: HomeScreen.tsx
app/service/: Charge.tsx
docs/: apple_google_pay.md  apple_pay.md  google_pay.md  setup.md
ios/: Podfile
ios/rnsqipfromscratchdemo/: Info.plist
ios/rnsqipfromscratchdemo.xcodeproj/: project.pbxproj
ios/rnsqipfromscratchdemo.xcodeproj/xcshareddata/xcschemes/: rnsqipfromscratchdemo.xcscheme
ios/rnsqipfromscratchdemo.xcworkspace/: contents.xcworkspacedata
pkg/sqip_backend/: Cargo.toml  README
pkg/sqip_backend/src/: client.rs  errors.rs  handlers.rs  main.rs
pkg/square_rust_sdk/: Cargo.toml
plugins/: withConfigureApplePayAndGooglePay.js  withSquareInAppPaymentsSDK.js
scripts/: setup.sh  square-post-install.rb
