[workspace]

resolver = "2"

members = ["pkg/*"]

[workspace.dependencies]
actix-web = "4.8.0"
dotenvy = "0.15.7"
env_logger = "0.11.3"
eyre = "0.6.12"
log = "0.4.22"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
