[package]
name = "sqip_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
square_rust_sdk = { path = "../square_rust_sdk" }
