[package]
name = "sqip_backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
dotenvy = "0.15.7"
env_logger = "0.11.3"
eyre = "0.6.12"
hex = "0.4.3"
log = "0.4.22"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
square-api-client = "0.1.9"
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = ["full"] }
